testando pequena alteração

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,10 +109,9 @@ nav ul li a:hover {
 }
 
 /* Classe adicionada pelo JS highlight.js*/
-.navbar__item.highlighted {
+.nav__hidden a.active {
     color: #2596be;
 }
-
 /* Fim da Classe adicionada pelo JS highlight.js */
 
 /* End of Navbar */
